[gd_scene load_steps=16 format=3 uid="uid://bf8d02l7l4bft"]

[ext_resource type="Texture2D" uid="uid://ca4vq8va515bm" path="res://dino_ride/assets/DinoSprites - doux.png" id="1_58aij"]
[ext_resource type="Script" path="res://dino_ride/dino.gd" id="1_bf1e3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_utbae"]
atlas = ExtResource("1_58aij")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mryy"]
atlas = ExtResource("1_58aij")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_43ac4"]
atlas = ExtResource("1_58aij")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mele4"]
atlas = ExtResource("1_58aij")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_75set"]
atlas = ExtResource("1_58aij")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqahf"]
atlas = ExtResource("1_58aij")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3owul"]
atlas = ExtResource("1_58aij")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3rlj"]
atlas = ExtResource("1_58aij")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oe7b"]
atlas = ExtResource("1_58aij")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmeu4"]
atlas = ExtResource("1_58aij")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_em473"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utbae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mryy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43ac4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mele4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75set")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqahf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3owul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3rlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oe7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmeu4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir73e"]
size = Vector2(12, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3qmt"]
size = Vector2(17, 19)

[node name="Dino" type="CharacterBody2D"]
script = ExtResource("1_bf1e3")

[node name="RiderContainer" type="Node2D" parent="."]

[node name="RiderPosition" type="Marker2D" parent="."]
position = Vector2(-4, -14)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_em473")
animation = &"idle"
frame_progress = 0.310537

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_ir73e")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_g3qmt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
